--- a/index.html
+++ b/index.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon-32x32 copy.png" type="image/x-icon">
     <title>My Frontend mentor CHallenges</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Projects</h1>
-    <a href="./four-card-feature-section-master/index.html">four-card-feature-section-master</a>
+    <div>
+        <h1>Frontend Mentor Challenges</h1>
+        <h2>Projects</h2>
+        <ul class="list"></ul>
+    </div>
+
+    <footer>
+        <a href="https://github.com/ErickLuizA/Frontend-mentor-challenges">
+        Code at Github</a>
+    </footer>
+    <script src="index.js"></script>
 </body>
 </html>
